add test to all file